src/objects/LID__User_OAuth__c.object
<CustomObject>
    <description>This object stores access tokens, a refresh token, and Time To Live of the tokens for a particular user for LinkedIn Sales Navigator</description>
    <fields>
        <fullName>LID__Access_Expiration__c</fullName>
        <label>Access Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__Access_Expired__c</fullName>
        <formula>LID__Access_Expiration__c  &lt;  NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__Refresh_Expiration__c</fullName>
        <label>Refresh Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__Refresh_Expired__c</fullName>
        <formula>LID__Refresh_Expiration__c &lt;  NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refresh Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__Sales_Access_Expiration__c</fullName>
        <label>Sales Access Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__Sales_Access_Expired__c</fullName>
        <formula>LID__Sales_Access_Expiration__c  &lt;  NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Access Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Sales_Access_Token__c</fullName>
        <label>Sales Access Token</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_OAuths</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User OAuth</label>
    <nameField>
        <displayFormat>LSNOAT-{00000}</displayFormat>
        <label>User OAuth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User OAuths</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>